--- a/pagos.html
+++ b/pagos.html
@@ -6,21 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagos</title>
-    <link rel="stylesheet" href="/css/icons/all.min.css">
+    <link rel="stylesheet" href="./iconos/css/all.min.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
     <header>
-        <nav>
+        <nav class="menu">
             <div>
                 <img src="#" alt="">
             </div>
             <div>
-                <ul>
+                <ul class="menu-horizontal">
                     <li><a href="/home.html">Inicio</a></li>
                     <li>
                         <a href="#">Paciente</a>
-                        <ul>
+                        <ul class="menu-vertical">
                             <li><a href="/login.html">Ingresar</a></li>
                             <li><a href="/registrar.html">Crear perfil</a></li>
                             <li><a href="/pagos.html">Realizar pago</a></li>
@@ -32,7 +33,7 @@
                     </li>
                     <li>
                         <a href="#">Médico</a>
-                        <ul>
+                        <ul class="menu-vertical">
                             <li><a href="/login.html">Ingresar</a></li>
                             <li><a href="/elaborarTratamientos.html">Elaborar tratamientos</a></li>
                             <li><a href="/planesDentales.html">Planes dentales</a></li>
@@ -43,7 +44,7 @@
                     </li>
                     <li>
                         <a href="#">Administrador</a>
-                        <ul>
+                        <ul class="menu-vertical">
                             <li><a href="/login.html">Ingresar</a></li>
                             <li><a href="/enviarComunicados.html">Enviar comunicados</a></li>
                             <li><a href="/historialCitas.html">Historial de citas</a></li>
@@ -61,49 +62,34 @@
         </nav>
     </header>
     <main>
-        <form action="#" method="post">
-            <div class="form-group">
-                <i class="fa-solid fa-credit-card"></i>
-                <label for="txtCarNumber">Número de tarjeta</label>
-                <input type="text" id="txtCarNumber" name="txtCarNumber" placeholder="Número de tarjeta" />
-            </div>
-            <div class="form-group">
-                <i class="fa-solid fa-calendar-week"></i>
-                <label for="txtExpirationDate">Fecha de expiración</label>
-                <input type="text" id="txtExpirationDate" name="txtExpirationDate" placeholder="02/24" />
-            </div>
-            <div class="form-group">
-                <i class="fa-solid fa-key"></i>
-                <label for="txtSecurityCode"></label>
-                <input type="text" id="txtSecurityCode" name="txtSecurityCode" placeholder="Código de seguridad" />
-            </div>
-            <div class="form-group">
+        <section class="formularios">
+            <form action="#" method="post" id="form">
                 <div class="form-group">
-                    <button type="button"><i class="fa-solid fa-paper-plane"></i> Enviar</button>
+                    <i class="fa-solid fa-credit-card"></i>
+                    <label for="txtCarNumber">Número de tarjeta</label>
+                    <input type="text" id="txtCarNumber" name="txtCarNumber" placeholder="Número de tarjeta" />
                 </div>
-            </div>
-        </form>
-    </main>
-    <footer>
-        <section>
-            <article>
-                <h4>Redes Sociales</h4>
-                <div>
-                    <img src="img/facebook.png" alt="">
-                    <img src="img/instagram.png" alt="">
-                    <img src="img/twitter.png" alt="">
+                <div class="form-group">
+                    <i class="fa-solid fa-calendar-week"></i>
+                    <label for="txtExpirationDate">Fecha de expiración</label>
+                    <input type="text" id="txtExpirationDate" name="txtExpirationDate" placeholder="02/24" />
                 </div>
-            </article>
-            <article>
-                <h4>Información de contacto</h4>
-                <div>
-                    <img src="img/telephone.png" alt="">
-                    <img src="img/gmail.png" alt="">
-                    <img src="img/whatsapp.png" alt="">
+                <div class="form-group">
+                    <i class="fa-solid fa-key"></i>
+                    <label for="txtSecurityCode"></label>
+                    <input type="text" id="txtSecurityCode" name="txtSecurityCode" placeholder="Código de seguridad" />
                 </div>
-            </article>
+                <div class="form-group">                
+                        <button type="submit" id="btnPagos">Enviar</button>               
+                </div>
+                <div class="mensajesError" id="mensajesValidacion">
+                </div>
+                <div class="mensajesExito" id="mensajesExito">
+                </div>
+            </form>
         </section>
-    </footer>
+    </main>
+    <script src="js/pagos.js"></script>
 </body>
 
 </html>
