--- a/promociones.html
+++ b/promociones.html
@@ -71,7 +71,11 @@
                         <textarea name="txtNombre" id="txtNombre" cols="30" rows="10"></textarea>
                     </div>
                     <div class="form-group">
-                       <button>Guardar</button>
+                        <button id="btnEnviar">Guardar</button>
+                    </div>
+                    <div class="mensajesError" id="mensajesValidacion">
+                    </div>
+                    <div class="mensajesExito" id="mensajesExito">
                     </div>
                 </form>
             </fieldset>
@@ -90,7 +94,8 @@
                             <tr>
                                 <td>1</td>
                                 <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi autem obcaecati
-                                    consequatur unde impedit iusto nobis provident atque natus, nam eum facere id. Deserunt
+                                    consequatur unde impedit iusto nobis provident atque natus, nam eum facere id.
+                                    Deserunt
                                     non at beatae incidunt suscipit iste?
                                 </td>
                                 <td>
@@ -112,7 +117,8 @@
                             <tr>
                                 <td>3</td>
                                 <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque et reprehenderit
-                                    pariatur repudiandae, tempora in recusandae, laborum dicta dolorem a tenetur explicabo
+                                    pariatur repudiandae, tempora in recusandae, laborum dicta dolorem a tenetur
+                                    explicabo
                                     ullam. Temporibus repellat voluptatibus, rerum soluta esse non?
                                 </td>
                                 <td>
@@ -124,9 +130,10 @@
                     </table>
                 </div>
             </fieldset>
-           
+
         </section>
     </main>
+    <script src="/js/promociones.js"></script>
 </body>
 
 </html>
