--- a/citas.html
+++ b/citas.html
@@ -63,7 +63,10 @@
     </header>
     <main>
         <section class="formularios">
-            <form action="#" method="post" id="form">
+            <form action="#" method="post" id="form" class="formulario">
+                <div class="form-group title">
+                    <h3>Agendar citas</h3>
+                </div>
                 <div class="form-group">
                     <label for="txtTipoServicio">Servicio</label>
                     <select name="txtTipoServicio" id="txtTipoServicio">
