--- a/elaborarTratamientos.html
+++ b/elaborarTratamientos.html
@@ -63,25 +63,33 @@
     </header>
     <main>
         <section class="formularios">
-            <form action="#" method="post">
+            <form action="#" method="post" id="form" class="formulario">
+                <div class="form-group title">
+                    <h3>Elaborar tratamientos</h3>
+                </div>
                 <div class="form-group">
                     <label for="txtIdentificacion">Identificación</label>
                     <input type="text" id="txtIdentificacion" name="txtIdentificacion" placeholder="Identificación">
                 </div>
                 <div class="form-group">
-                    <label for="txtAsunto">Paciente</label>
-                    <input type="text" id="txtPaciente" name="txtPaciente" placeholder="Paciente" readonly>
+                    <label for="txtPaciente">Paciente</label>
+                    <input type="text" id="txtPaciente" name="txtPaciente" placeholder="Paciente">
                 </div>
                 <div class="form-group">
                     <label for="txtMensaje">Descripción</label>
                     <textarea name="txtDesc" id="txtDesc" cols="30" rows="10" placeholder="Escribe aquí..."></textarea>
                 </div>
                 <div class="form-group">
-                    <button>Enviar</button>
+                    <button id="btnEnviar">Enviar</button>
+                </div>
+                <div class="mensajesError" id="mensajesValidacion">
+                </div>
+                <div class="mensajesExito" id="mensajesExito">
                 </div>
             </form>
         </section>
     </main>
+    <script src="/js/elaborarTratamientos.js"></script>
 </body>
 
 </html>
