--- a/login.html
+++ b/login.html
@@ -63,7 +63,10 @@
     </header>
     <main>
         <section class="formularios">
-            <form action="#" method="post">
+            <form action="#" method="post" class="formulario" id="form">
+                <div class="form-group title">
+                    <h3>Iniciar sesión</h3>
+                </div>
                 <div class="form-group">
                     <i class="fa-solid fa-envelope"></i>
                     <label for="txtEmail">Email</label>
