--- a/pagos.html
+++ b/pagos.html
@@ -63,7 +63,10 @@
     </header>
     <main>
         <section class="formularios">
-            <form action="#" method="post" id="form">
+            <form action="#" method="post" id="form" class="formulario">
+                <div class="form-group title">
+                    <h3>Pagos</h3>
+                </div>
                 <div class="form-group">
                     <i class="fa-solid fa-credit-card"></i>
                     <label for="txtCarNumber">Número de tarjeta</label>
