--- a/planesDentales.html
+++ b/planesDentales.html
@@ -63,13 +63,17 @@
         <section class="formularios">
             <fieldset>
                 <legend>Agregar plan dental</legend>
-                <form action="#" method="post">
+                <form action="#" method="post" id="form">
                     <div class="form-group">
                         <label for="txtNombre"></label>
                         <textarea name="txtNombre" id="txtNombre" cols="30" rows="10"></textarea>
                     </div>
                     <div class="form-group">
-                       <button>Guardar</button>
+                       <button id="btnEnviar">Guardar</button>
+                    </div>
+                    <div class="mensajesError" id="mensajesValidacion">
+                    </div>
+                    <div class="mensajesExito" id="mensajesExito">
                     </div>
                 </form>
             </fieldset> 
@@ -124,5 +128,6 @@
             </fieldset>
         </section>
     </main>
+    <script src="/js/planesDentales.js"></script>
 </body>
 </html>
