--- a/registrar.html
+++ b/registrar.html
@@ -63,7 +63,10 @@
     </header>
     <main>
         <section class="formularios">
-            <form action="#" method="post" id="form">
+            <form action="#" method="post" id="form" class="formulario">
+                <div class="form-group title">
+                    <h3>Crear Perfil</h3>
+                </div>
                 <div class="form-group">
                     <i class="fa-solid fa-id-card-clip"></i>
                     <label for="txtIdentificacion">Identificación</label>
